Add static UIs for adding Admin and modal progress list

--- a/stylesheets/_component.modals.scss
+++ b/stylesheets/_component.modals.scss
@@ -335,3 +335,9 @@
         }
     }
 }
+
+.modal__ribbon {
+    background-color: color(gray, off-white);
+    border-bottom: 1px solid #e5e5e5;
+    padding: $line-height-base 20px;
+}
