--- a/views/lexicon/index.html.twig
+++ b/views/lexicon/index.html.twig
@@ -67,14 +67,6 @@
           "label" : "Cards",
           "href"  : "?tab=cards",
           "src"   : tab_cards,
-          "active": true
-        },
-        {
-          "id"    : "cards",
-          "label" : "Cards",
-          "href"  : "?tab=cards",
-          "src"   : tab_cards,
-          "active": true
         },
         {
           "id"    : "colours",
@@ -146,7 +138,8 @@
           "id"    : "progress",
           "label" : "Progress bars",
           "href"  : "?tab=progress",
-          "src"   : tab_progress_bars
+          "src"   : tab_progress_bars,
+          "active": true
         },
         {
           "id"    : "table",
