--- a/views/lexicon/tabs/progress_bars.html.twig
+++ b/views/lexicon/tabs/progress_bars.html.twig
@@ -217,4 +217,16 @@
 
     </div>
 
+    <ol class="progress-steps">
+        <li class="progress-steps__step progress-steps__step--current">
+            1
+        </li>
+        <li class="progress-steps__step progress-steps__step">
+            2
+        </li>
+        <li class="progress-steps__step">
+            {{ html.icon('flag-checkered') }}
+        </li>
+    </ol>
+
 {% endblock tab_content %}
