--- a/stylesheets/_layout.sidebar.scss
+++ b/stylesheets/_layout.sidebar.scss
@@ -2,6 +2,7 @@
 	display: none;
 	float: none;
 	height: 100%;
+	padding-left: 10px;
 	vertical-align: top;
 
 	@include respond-min($screen-large-desktop) {
