--- a/views/pulsar/layouts/base.html.twig
+++ b/views/pulsar/layouts/base.html.twig
@@ -129,7 +129,7 @@
             <div class="content-main">
                 <div class="tabs__content">
                     {{ nav.breadcrumbs(breadcrumbs|default) }}
-
+                    {% block header_actions %}{% endblock %}
                     {% set _ribbon = '' %}
                     {% set _ribbon = block('ribbon') %}
                     {% if _ribbon is not empty %}
@@ -143,7 +143,6 @@
                     {% else %}
                         <h1 class="main-title">{{ heading|default('MISSING HEADING') }}</h1>
                     {% endif %}
-
                     {% block tabs_list %}{% endblock %}
                     {% block tabs_content %}{% endblock %}
                 </div>
