--- a/views/pulsar/v2/helpers/html.html.twig
+++ b/views/pulsar/v2/helpers/html.html.twig
@@ -1369,6 +1369,7 @@ class name, eg:
  * offline
  * active
  * inactive
+ * warning
 
 Some states are simply synonyms of each other, the choice of verb will be
 defined by the context in which it is to be used.
