--- a/views/playground/galaxies/sites.html.twig
+++ b/views/playground/galaxies/sites.html.twig
@@ -62,10 +62,10 @@
                     {{ html.icon('square-o', { 'class': 'table-row-select js-select' }) }}
                 </td>
                 <td class="centered">{{ html.status('online') }}</td>
-                <td><a href="galaxies/designer.html.twig">Godiva Festival</a></td>
+                <td><a href="designer.html.twig">Godiva Festival</a></td>
                 <td>English (EN)</td>
                 <td>
-                    {{ html.link({ 'label': 'Settings', 'class': 'table-action', 'href': 'galaxies/designer.html.twig' }) }}
+                    {{ html.link({ 'label': 'Settings', 'class': 'table-action', 'href': 'designer.html.twig' }) }}
                     {{ html.link({ 'label': 'Control Center', 'class': 'table-action' }) }}
                     {{ html.link({ 'label': 'Visit Site', 'class': 'table-action' }) }}
                 </td>
@@ -79,10 +79,10 @@
                     {{ html.icon('square-o', { 'class': 'table-row-select js-select' }) }}
                 </td>
                 <td class="centered">{{ html.status('online') }}</td>
-                <td><a href="galaxies/designer.html.twig">Oxford Town Hall</a></td>
+                <td><a href="designer.html.twig">Oxford Town Hall</a></td>
                 <td>English (EN)</td>
                 <td>
-                    {{ html.link({ 'label': 'Settings', 'class': 'table-action', 'href': 'galaxies/designer.html.twig' }) }}
+                    {{ html.link({ 'label': 'Settings', 'class': 'table-action', 'href': 'designer.html.twig' }) }}
                     {{ html.link({ 'label': 'Control Center', 'class': 'table-action' }) }}
                     {{ html.link({ 'label': 'Visit Site', 'class': 'table-action' }) }}
                 </td>
@@ -96,10 +96,10 @@
                     {{ html.icon('square-o', { 'class': 'table-row-select js-select' }) }}
                 </td>
                 <td class="centered">{{ html.status('online') }}</td>
-                <td><a href="galaxies/designer.html.twig">Oxford Town Hall</a></td>
+                <td><a href="designer.html.twig">Oxford Town Hall</a></td>
                 <td>Japanese</td>
                 <td>
-                    {{ html.link({ 'label': 'Settings', 'class': 'table-action', 'href': 'galaxies/designer.html.twig' }) }}
+                    {{ html.link({ 'label': 'Settings', 'class': 'table-action', 'href': 'designer.html.twig' }) }}
                     {{ html.link({ 'label': 'Control Center', 'class': 'table-action' }) }}
                     {{ html.link({ 'label': 'Visit Site', 'class': 'table-action' }) }}
                 </td>
@@ -113,10 +113,10 @@
                     {{ html.icon('square-o', { 'class': 'table-row-select js-select' }) }}
                 </td>
                 <td class="centered">{{ html.status('online') }}</td>
-                <td><a href="galaxies/designer.html.twig">Royal Pump Rooms</a></td>
+                <td><a href="designer.html.twig">Royal Pump Rooms</a></td>
                 <td>English (EN)</td>
                 <td>
-                    {{ html.link({ 'label': 'Settings', 'class': 'table-action', 'href': 'galaxies/designer.html.twig' }) }}
+                    {{ html.link({ 'label': 'Settings', 'class': 'table-action', 'href': 'designer.html.twig' }) }}
                     {{ html.link({ 'label': 'Control Center', 'class': 'table-action' }) }}
                     {{ html.link({ 'label': 'Visit Site', 'class': 'table-action' }) }}
                 </td>
@@ -130,10 +130,10 @@
                     {{ html.icon('square-o', { 'class': 'table-row-select js-select' }) }}
                 </td>
                 <td class="centered">{{ html.status('offline') }}</td>
-                <td><a href="galaxies/designer.html.twig">Royal Space Centre</a></td>
+                <td><a href="designer.html.twig">Royal Space Centre</a></td>
                 <td>English (EN)</td>
                 <td>
-                    {{ html.link({ 'label': 'Settings', 'class': 'table-action', 'href': 'galaxies/designer.html.twig' }) }}
+                    {{ html.link({ 'label': 'Settings', 'class': 'table-action', 'href': 'designer.html.twig' }) }}
                     {{ html.link({ 'label': 'Control Center', 'class': 'table-action' }) }}
                     {{ html.link({ 'label': 'Visit Site', 'class': 'table-action' }) }}
                 </td>
@@ -147,10 +147,10 @@
                     {{ html.icon('square-o', { 'class': 'table-row-select js-select' }) }}
                 </td>
                 <td class="centered">{{ html.status('online') }}</td>
-                <td><a href="galaxies/designer.html.twig">St Mary's Guildhall</a></td>
+                <td><a href="designer.html.twig">St Mary's Guildhall</a></td>
                 <td>English (EN)</td>
                 <td>
-                    {{ html.link({ 'label': 'Settings', 'class': 'table-action', 'href': 'galaxies/designer.html.twig' }) }}
+                    {{ html.link({ 'label': 'Settings', 'class': 'table-action', 'href': 'designer.html.twig' }) }}
                     {{ html.link({ 'label': 'Control Center', 'class': 'table-action' }) }}
                     {{ html.link({ 'label': 'Visit Site', 'class': 'table-action' }) }}
                 </td>
@@ -164,10 +164,10 @@
                     {{ html.icon('square-o', { 'class': 'table-row-select js-select' }) }}
                 </td>
                 <td class="centered">{{ html.status('offline') }}</td>
-                <td><a href="galaxies/designer.html.twig">Visit Coventry and Warwickshire</a></td>
+                <td><a href="designer.html.twig">Visit Coventry and Warwickshire</a></td>
                 <td>English (EN)</td>
                 <td>
-                    {{ html.link({ 'label': 'Settings', 'class': 'table-action', 'href': 'galaxies/designer.html.twig' }) }}
+                    {{ html.link({ 'label': 'Settings', 'class': 'table-action', 'href': 'designer.html.twig' }) }}
                     {{ html.link({ 'label': 'Control Center', 'class': 'table-action' }) }}
                     {{ html.link({ 'label': 'Visit Site', 'class': 'table-action' }) }}
                 </td>
@@ -181,10 +181,10 @@
                     {{ html.icon('square-o', { 'class': 'table-row-select js-select' }) }}
                 </td>
                 <td class="centered">{{ html.status('offline') }}</td>
-                <td><a href="galaxies/designer.html.twig">War Memorial Park Tennis Club</a></td>
+                <td><a href="designer.html.twig">War Memorial Park Tennis Club</a></td>
                 <td>English (EN)</td>
                 <td>
-                    {{ html.link({ 'label': 'Settings', 'class': 'table-action', 'href': 'galaxies/designer.html.twig' }) }}
+                    {{ html.link({ 'label': 'Settings', 'class': 'table-action', 'href': 'designer.html.twig' }) }}
                     {{ html.link({ 'label': 'Control Center', 'class': 'table-action' }) }}
                     {{ html.link({ 'label': 'Visit Site', 'class': 'table-action' }) }}
                 </td>
@@ -292,7 +292,7 @@
                 <div class="modal__ribbon">
                     <ol class="progress-steps">
                         <li class="progress-steps__step progress-steps__step--complete">
-                            1
+                            {{ html.icon('check') }}
                         </li>
                         <li class="progress-steps__step progress-steps__step progress-steps__step--current">
                             2
@@ -366,10 +366,10 @@
                 <div class="modal__ribbon">
                     <ol class="progress-steps">
                         <li class="progress-steps__step progress-steps__step--complete">
-                            1
+                            {{ html.icon('check') }}
                         </li>
                         <li class="progress-steps__step progress-steps__step--complete">
-                            2
+                            {{ html.icon('check') }}
                         </li>
                         <li class="progress-steps__step progress-steps__step--complete">
                             {{ html.icon('flag-checkered') }}
