--- a/views/playground/galaxies/theme.html.twig
+++ b/views/playground/galaxies/theme.html.twig
@@ -111,6 +111,24 @@
             })
         }}
 
+
+
+            <div class="form__group form__group--top form__group--flush form__group--full file">
+                <label for="quantum_client_branding_settings_command_detailedLogo_image" class="required control__label">Logo
+                    <i class="icon-info-circle" aria-hidden="true" data-toggle="tooltips" data-html="true" data-title="" data-original-title="" title=""></i>
+                </label>
+                <div class="controls">
+
+                    <img src="http://via.placeholder.com/330x200/ffffff/000000?text=logo-preview" />
+
+                    <input class="form__control file" type="file" id="quantum_client_branding_settings_command_detailedLogo_image" name="quantum_client_branding_settings_command[detailedLogo][image]" accept="image/*">
+                    <p class="help-block">Used in your site header, favicon and emails.<br />Min 200 x 200px. Use SVG for best results.</p>
+                </div>
+            </div>
+
+
+
+
         {{
             form.end({
                 'class': 'form__actions--flush',
