--- a/views/pulsar/v2/helpers/form.html.twig
+++ b/views/pulsar/v2/helpers/form.html.twig
@@ -2130,16 +2130,18 @@ data-*        | string | Data attributes, eg: `'data-foo': 'bar'`
                                 {% for heading in options.headings %}
                                     <th data-repeater-for-name="{{ heading.name }}">{{ heading.label }}</th>
                                 {% endfor %}
+                                <th rowspan="1" colspan="1"></th>
                             </tr>
                         </thead>
                         <tbody class="repeater__preview-data">
                             <tr class="repeater__empty-placeholder">
                                 <td colspan="2" class="muted">{{ options.empty }}</td>
+                                <td class="table__td table__td--align-right table-row__actions"></td>
                             </tr>
                         </tbody>
                         <tfoot>
-                        <tr class="repeater__group">
-                            <td class="table__form" colspan="2">
+                        <tr class="repeater__group" data-repeater-new-group>
+                            <td class="table__form" colspan="3">
 
 {% endspaceless %}
 {% endmacro %}
@@ -2150,6 +2152,7 @@ data-*        | string | Data attributes, eg: `'data-foo': 'bar'`
                                 <div class="form__actions repeater__group-actions">
                                     {{
                                         html.button({
+                                            'data-repeater-save-group': 'true',
                                             'label': 'Add',
                                             'class': 'btn--primary repeater__save-group',
                                             'type': 'button'
@@ -2158,6 +2161,7 @@ data-*        | string | Data attributes, eg: `'data-foo': 'bar'`
 
                                     {{
                                         html.button({
+                                            'data-repeater-cancel-save': 'true',
                                             'label': 'Cancel',
                                             'class': 'btn--naked repeater__cancel-group',
                                             'type': 'button'
@@ -2171,6 +2175,7 @@ data-*        | string | Data attributes, eg: `'data-foo': 'bar'`
                 </div>
                 {{
                     html.button({
+                        'data-repeater-add-group': 'true',
                         'label': 'Add',
                         'class': 'btn--primary repeater__add-group'
                     })
