Tidy up complete modal for new glaaxies tie

--- a/stylesheets/_utility.utilities.scss
+++ b/stylesheets/_utility.utilities.scss
@@ -64,6 +64,10 @@ p.success {
     margin-bottom: 0 !important;
 }
 
+.u-margin-top {
+    margin-top: 1em;
+}
+
 .double-top {
     margin-top: 2em;
 }
