--- a/views/playground/galaxies/sites.html.twig
+++ b/views/playground/galaxies/sites.html.twig
@@ -377,7 +377,7 @@
                     </ol>
                 </div>
                 <div class="modal__body u-text-align-center">
-                    <h1>You're almost done!</h1>
+                    <h1 class="u-margin-top">You're almost done!</h1>
                     <p> That's all the information we need to create your new site, you can change all your settings and choose your theme in the next steps and when you're ready, <strong>publish</strong> it to the world.</p>
                 </div>
                 <div class="modal__footer">
