--- a/views/pulsar/v2/helpers/form.html.twig
+++ b/views/pulsar/v2/helpers/form.html.twig
@@ -2112,6 +2112,7 @@ data-*        | string | Data attributes, eg: `'data-foo': 'bar'`
 {% import '@pulsar/pulsar/v2/helpers/elem.html.twig' as elem %}
 {% import '@pulsar/pulsar/v2/helpers/html.html.twig' as html %}
 {% import _self as form %}
+{% set headingLength = options.headings|length %}
 {% spaceless %}
     <div class="repeater">
         <div class="repeater__saved-data" style="display: none;"></div>
@@ -2136,13 +2137,13 @@ data-*        | string | Data attributes, eg: `'data-foo': 'bar'`
                         {#TODO // colspan needs to be dynamic#}
                         <tbody class="repeater__preview-data">
                             <tr class="repeater__empty-placeholder">
-                                <td colspan="1" class="muted">{{ options.empty }}</td>
+                                <td colspan="{{ headingLength }}" class="muted">{{ options.empty }}</td>
                                 <td class="table__td table__td--align-right table-row__actions"></td>
                             </tr>
                         </tbody>
                         <tfoot>
                         <tr class="repeater__group" data-repeater-new-group>
-                            <td class="table__form" colspan="3">
+                            <td class="table__form" colspan={{ headingLength + 1 }}>
 
 {% endspaceless %}
 {% endmacro %}
