add new group button text

--- a/views/lexicon/forms/repeatable.html.twig
+++ b/views/lexicon/forms/repeatable.html.twig
@@ -12,7 +12,9 @@
             'empty': 'You have not added any team members',
             'headings': [
                 { 'label': 'Name', 'name': 'full_name' }
-            ]
+            ],
+            'add-new-group-text': 'Add',
+            'add-another-group-text': 'Add another'
         }) }}
 
             {{
